--- a/public/kakaomap-api.html
+++ b/public/kakaomap-api.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="css/slicknav.min.css" type="text/css" />
     <link rel="stylesheet" href="css/style.css" type="text/css" />
     <link rel="stylesheet" href="css/modaltest.css" type="text/css" />
+    <script src="./src/dailymenu.js" defer></script>
     <!-- 카카오 api -->
     <script
       type="text/javascript"
