--- a/public/mypage.html
+++ b/public/mypage.html
@@ -538,6 +538,7 @@
     <!-- Footer Section End -->
     <!-- 적용하려는 script 파일 -->
     <script src="./src/user.js" defer></script>
+    <script src="./src/dailymenu.js" defer></script>
     <script src="./src/mypage.js"></script>
     <script src="./src/checkLogin.js"></script>
     <!-- 적용하려는 script 파일 끝 -->
