--- a/public/feed-detail.html
+++ b/public/feed-detail.html
@@ -455,6 +455,7 @@
     <script src="./src/admin.js"></script>
     <script src="./src/user.js"></script>
     <script src="./src/feed-detail.js"></script>
+    <script src="./src/dailymenu.js" defer></script>
     <!-- Js Plugins -->
     <script src="js/jquery-3.3.1.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
