--- a/public/terms.html
+++ b/public/terms.html
@@ -392,6 +392,7 @@
 
     <script src="./src/admin.js"></script>
     <script src="./src/checkLogin.js"></script>
+    <script src="./src/dailymenu.js" defer></script>
 
     <!-- Js Plugins -->
     <script src="js/jquery-3.3.1.min.js"></script>
