--- a/public/foodlist.html
+++ b/public/foodlist.html
@@ -304,7 +304,7 @@
           <div class="col-lg-8" style="max-width: 1000px">
             <nav class="header__menu">
               <ul>
-                <li class="active">
+                <li>
                   <a id="tob-bar" href="./index.html">홈</a>
                 </li>
                 <li>
@@ -313,7 +313,7 @@
                 <li>
                   <a id="tob-bar" href="./menu-subscribe.html">메뉴 추천</a>
                 </li>
-                <li><a id="tob-bar" href="./foodlist.html">메뉴판</a></li>
+                <li class="active"><a id="tob-bar" href="./foodlist.html">메뉴판</a></li>
                 <li><a id="tob-bar" href="./feed.html">피드</a></li>
               </ul>
             </nav>
