--- a/public/terms.html
+++ b/public/terms.html
@@ -97,38 +97,26 @@
 
     <!--여기부터-->
     <!--주석 처리한 부분은 필요 없다고 생각될 경우 제거 예정입니다.-->
-    <!-- Header Section Begin -->
-    <header class="header">
+     <!-- 탑바 시작 -->
+     <header class="header">
       <div class="header__top">
         <div class="container">
           <div class="row">
-            <div class="col-lg-6">
-              <div class="header__top__left">
-                <ul></ul>
-              </div>
-            </div>
-            <div class="col-lg-6">
-              <div class="header__top__right">
-                <div class="header__top__right__social">
-                  <a href="#"><i class="fa fa-github"></i></a>
-                </div>
-              </div>
-            </div>
           </div>
         </div>
       </div>
       <div class="container">
-        <div class="row">
-          <div class="col-lg-3">
+        <div class="top-row d-flex justify-content-between align-items-center">
+          <div class="col-lg-3" style="max-width: 150px">
             <div class="header__logo">
               <a href="./index.html"><img src="img/logo.png" alt="" /></a>
             </div>
           </div>
           <nav class="humberger__menu__nav mobile-menu"></nav>
-          <div class="col-lg-6">
+          <div class="col-lg-8" style="max-width: 1000px">
             <nav class="header__menu">
               <ul>
-                <li>
+                <li class="active">
                   <a id="tob-bar" href="./index.html">홈</a>
                 </li>
                 <li>
@@ -142,6 +130,14 @@
               </ul>
             </nav>
           </div>
+          <div class="col-lg-3" style="max-width: 200px; text-align: center">
+            <div class="header__cart">
+            </div>
+          </div>
+        </div>
+      </div>
+    </header>
+    <!-- 탑바 끝 -->
           <!--모든 페이지에 적용하려면 컨테이너 col-lg-6의 </div> 라인 밑에 242번라인~247번라인을 복붙하면 됩니다.-->
           <div class="col-lg-3">
             <div class="header__cart">
@@ -391,7 +387,6 @@
     </footer>
 
     <script src="./src/admin.js"></script>
-    <script src="./src/checkLogin.js"></script>
 
     <!-- Js Plugins -->
     <script src="js/jquery-3.3.1.min.js"></script>
