푸드리스트에 로그인체크 추가, 마이페이지 프론트 수정

--- a/public/foodlist.html
+++ b/public/foodlist.html
@@ -414,6 +414,7 @@
     <script src="./src/foodlist.js"></script> 
     <script src="./src/user.js" defer></script>
     <script src="./src/dailymenu.js" defer></script>
+    <script src="./src/checkLogin.js"></script>
     <!-- Js Plugins -->
     <script src="js/jquery-3.3.1.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
