--- a/public/mypage.html
+++ b/public/mypage.html
@@ -339,10 +339,18 @@
         </div>
       </section>
       <div class="mypage-buttons">
-        <button data-bs-toggle="modal" data-bs-target="#modifyUserModal">
+        <button
+          data-bs-toggle="modal"
+          class="site-btn"
+          data-bs-target="#modifyUserModal"
+        >
           내 정보 수정
         </button>
-        <button data-bs-toggle="modal" data-bs-target="#deleteUserModal">
+        <button
+          data-bs-toggle="modal"
+          class="site-btn"
+          data-bs-target="#deleteUserModal"
+        >
           회원 탈퇴
         </button>
       </div>
