fix foodlist 수정

--- a/public/feed-detail.html
+++ b/public/feed-detail.html
@@ -351,7 +351,7 @@
               <div class="blog__item__text">
                 <button class="site-btn" id="feed-change">피드 수정</button>
                 <button class="site-btn" id="feed-delete">피드 삭제</button>
-                <button class="site-btn" id="commentCreate">댓글 생성</button>
+                <!-- <button class="site-btn" id="commentCreate">댓글 생성</button> -->
               </div>
               <!-- 댓글 section 시작 -->
               <div id="comment-box">
@@ -364,8 +364,8 @@
                 </div>
               </div>
               <!-- 댓글 section 끝 -->
-            <button class="site-btn" id="comment-change">댓글 수정</button>
-            <button class="site-btn" id="comment-delete">댓글 삭제</button>
+            <!-- <button class="site-btn" id="comment-change">댓글 수정</button>
+            <button class="site-btn" id="comment-delete">댓글 삭제</button> -->
           </div>
         </div>
       </div>
