--- a/public/feed-detail.html
+++ b/public/feed-detail.html
@@ -349,8 +349,18 @@
                 <i class="fas fa-heart fa-2x" style="color: #ec3609; display: none;"></i>
               </div>
               <div class="blog__item__text">
-                <button class="site-btn" id="feed-change">피드 수정</button>
-                <button class="site-btn" id="feed-delete">피드 삭제</button>
+                <div id="myModal" class="modal">
+                  <div class="modal-content">
+                    <h2>피드 수정</h2>
+                    <textarea id="modal-feed-title" placeholder="제목 수정"></textarea>
+                    <textarea id="modal-feed-content" placeholder="내용 수정"></textarea>
+                    <button id="modal-save" onclick="feedModify()">수정하기</button>
+                    <!-- 모달 닫기 버튼 -->
+                    <button id="modal-close">닫기</button>
+                  </div>
+                </div>
+                <button class="site-btn" id="feed-change" onclick=>피드 수정</button>
+                <button class="site-btn" id="feed-delete" onclick="feedDelete()">피드 삭제</button>
                 <button class="site-btn" id="commentCreate">댓글 생성</button>
               </div>
               <!-- 댓글 section 시작 -->
