--- a/public/mypage.html
+++ b/public/mypage.html
@@ -386,6 +386,7 @@
                   <input
                     type="code"
                     class="modal-input"
+                    id="newNick_Name"
                     placeholder="변경할 닉네임"
                     required
                   />
@@ -394,8 +395,9 @@
               <div class="row mb-3">
                 <div class="col">
                   <input
-                    type="code"
+                    type="password"
                     class="modal-input"
+                    id="password"
                     placeholder="현재 비밀번호"
                     required
                   />
@@ -404,8 +406,9 @@
               <div class="row mb-3">
                 <div class="col">
                   <input
-                    type="code"
+                    type="password"
                     class="modal-input"
+                    id="new-password"
                     placeholder="새 비밀번호"
                     required
                   />
@@ -460,7 +463,8 @@
               <div class="row mb-3">
                 <div class="col">
                   <input
-                    type="code"
+                    type="password"
+                    id="passwordDelete1"
                     class="modal-input"
                     placeholder="비밀번호"
                     required
@@ -472,6 +476,7 @@
                   <input
                     type="code"
                     class="modal-input"
+                    id="passwordDelete2"
                     placeholder="비밀번호 확인"
                     required
                   />
