--- a/public/preference.html
+++ b/public/preference.html
@@ -381,35 +381,11 @@
             </div>
           </div>
         </div>
-        <div class="row featured__filter" id="favoriteList">
+        <div class="col-12 featured__filter" id="favoriteList">
         </div>
       </div>
   </section>
   <!-- 선호음식 filter section 끝 -->
-  <!-- Footer Section Begin -->
-  <footer class="footer spad">
-  </section>
-  <!-- 선호도 조사 section 끝 -->
-  <!-- 선호음식 filter section 시작 --> 
-  <section class="product spad">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-12">
-          <div class="featured__controls">
-            <ul>
-              <li data-filter=".favorites" id="likeBtn">선호 음식</li>
-              <li data-filter=".excluded-foods" id="excludeFoodBtn">제외 음식</li>
-              <li data-filter=".excluede-ingredient" id="excludeIngredientBtn">제외 재료</li>
-              <li data-filter=".excluded-ing-foods" id="excludeInFoodBtn">제외 재료 포함 음식</li>
-            </ul>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-12 featured__filter" id="favoriteList">
-      </div>
-    </div>
-</section> 
-<!-- 선호음식 filter section 끝 -->
   <!-- Footer Section Begin -->
   <footer class="footer spad">
           <div class="container">
