--- a/public/index.html
+++ b/public/index.html
@@ -328,8 +328,8 @@
         <div class="hero__text"> -->
       <div style="margin-bottom: 100px">
         <h2 style="color: black; margin-top: 50px">TOGETHER EAT!</h2>
-        <a href="menu-subscribe.html" class="main-btn">메뉴 추천</a>
-        <a href="./preference.html" class="main-btn">선호도 조사</a>
+        <a href="menu-subscribe.html" class="mainMenuBtn">메뉴 추천</a>
+        <a href="./preference.html" class="mainPreferBtn">선호도 조사</a>
       </div>
     </section>
     <footer class="footer spad">
