피드 삭제 커밋

--- a/public/feed-detail.html
+++ b/public/feed-detail.html
@@ -351,7 +351,7 @@
               </div>
               <div class="blog__item__text">
                 <button class="site-btn" id="feed-change">피드 수정</button>
-                <button class="site-btn" id="feed-delete">피드 삭제</button>
+                <button class="site-btn" id="feed-delete" onclick="feedDelete()">피드 삭제</button>
                 <!-- 댓글 section 시작 -->
 <div id="comment-section">
   <div class="comment-input-box">
