feat 관리자 음식 생성 완료

--- a/public/index.html
+++ b/public/index.html
@@ -269,6 +269,13 @@
                     <i class="fa fa-user"></i>마이페이지&nbsp;&nbsp;&nbsp;
                   </a>
                   <a
+                    href="./foodlist-admin.html"
+                    id="mypageClick"
+                    class="mypageClick d-none"
+                  >
+                    <i class="fa fa-user"></i>관자리메뉴판&nbsp;&nbsp;&nbsp;
+                  </a>
+                  <a
                     href="#"
                     id="logoutClick"
                     class="logoutClick d-none"
