fix: 댓글 추가 및 삭제 기능 수정 댓글 추가 시 엔터키로 작동할 수 있게 기능 추가 댓글 css 수정 추후에 댓글 수정 기능 넣을 예정. 현재 안정화를 위해 댓글 생성 및 삭제만 구현

--- a/public/feed-detail.html
+++ b/public/feed-detail.html
@@ -370,7 +370,7 @@
                 &#8942; <!-- 세로 점 세 개의 HTML 엔터티 코드 -->
                 <!-- 드롭다운 메뉴 -->
                 <div class="dropdown-menu">
-                    <button id="comment-change">댓글 수정</button>
+                    <!-- <button id="comment-change">댓글 수정</button> -->
                     <button id="comment-delete">댓글 삭제</button>
                 <button class="site-btn" id="feed-change" onclick=>피드 수정</button>
                 <button class="site-btn" id="feed-delete" onclick="feedDelete()">피드 삭제</button>
