fix: 간이 메뉴판 조회 오류 수정 메뉴판 보기 >>> 간이 메뉴판으로 텍스트 변경 간이 메뉴판 정상적으로 조회되지 않는 사항 수정

--- a/public/preference.html
+++ b/public/preference.html
@@ -330,7 +330,7 @@
     <section id="survey" class="form-blog spad">
       <div class="section-title">
         <h2 style="display: inline-block">선호도 조사</h2>
-        <button id="the-menu" class="site-btn">메뉴판 보기</button>
+        <button id="the-menu" class="site-btn">간이 메뉴판</button>
       </div>
 
       <div class="container">
