fix: 선호도 조사 페이지 코드 수정 HTML 및 css 목록 추가에 따른 코드 수정

--- a/public/preference.html
+++ b/public/preference.html
@@ -372,6 +372,7 @@
         <div class="row">
           <div class="col-lg-12">
             <div class="featured__controls">
+              <p class="non-clickable"> 목록 </p>
               <ul>
                 <li data-filter=".favorites" id="likeBtn">선호 음식</li>
                 <li data-filter=".excluded-foods" id="excludeFoodBtn">
