fix: 선호리스트 안나오는 문제해결

--- a/public/preference.html
+++ b/public/preference.html
@@ -391,7 +391,7 @@
             </div>
           </div>
         </div>
-        <div class="row featured__filter" id="favoriteList"></div>
+        <div class="row-cols-4 featured__filter" id="favoriteList"></div>
       </div>
     </section>
     <!-- 선호음식 filter section 끝 -->
