--- a/public/foodlist-admin.html
+++ b/public/foodlist-admin.html
@@ -26,6 +26,7 @@
     <link rel="stylesheet" href="css/slicknav.min.css" type="text/css" />
     <link rel="stylesheet" href="css/style.css" type="text/css" />
     <link rel="stylesheet" href="css/modaltest.css" type="text/css">
+    <link re="stylesheet" href="css/foodlist-admin.css" type="text/css">
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <!-- CSS Styles END -->
 
@@ -37,7 +38,7 @@
           <div class="modal-content">
               <!-- 모달 헤더 -->
               <div class="modal-header">
-                  <h4 class="modal-title">카테고리 및 메뉴 추가/수정</h4>
+                  <h4 class="modal-title">메뉴 추가</h4>
                   <button type="button" class="close" data-dismiss="modal">&times;</button>
               </div>
               <!-- 모달 본문 -->
@@ -54,7 +55,7 @@
                       </div>
                       <div class="form-group">
                           <label for="food_img">이미지 추가:</label>
-                          <input type="file" class="form-control" id="food_img">
+                          <input type="file" class="form-control" id="food_img" >
                       </div>
                   </form>
               </div>
@@ -363,7 +364,6 @@
     <!-- 탑바 끝 -->
       <section class="product spad">
         <button id="addMenuButton" type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">메뉴 추가하기</button>
-          <button id="editMenuButton" type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">메뉴 수정하기</button>
         <div>
           <div class="dropdown">
             <!-- <select>
