fix: 마이페이지 기능 수정
내 정보 수정, 회원탈퇴 기능 수정

--- a/public/mypage.html
+++ b/public/mypage.html
@@ -339,8 +339,20 @@
         </div>
       </section>
       <div class="mypage-buttons">
-        <button data-bs-toggle="modal" data-bs-target="#modifyUserModal" class="site-btn">내 정보 수정</button>
-        <button data-bs-toggle="modal" data-bs-target="#deleteUserModal" class="site-btn">회원 탈퇴</button>
+        <button
+          data-bs-toggle="modal"
+          data-bs-target="#modifyUserModal"
+          class="site-btn"
+        >
+          내 정보 수정
+        </button>
+        <button
+          data-bs-toggle="modal"
+          data-bs-target="#deleteUserModal"
+          class="site-btn"
+        >
+          회원 탈퇴
+        </button>
       </div>
     </section>
     <!-- 유저 정보 버튼 section 끝 -->
@@ -415,6 +427,7 @@
               class="signbutton"
               data-bs-toggle="modal"
               data-bs-target="#signupModal"
+              onclick="updateUser()"
             >
               수정하기
             </button>
@@ -462,7 +475,7 @@
               <div class="row mb-3">
                 <div class="col">
                   <input
-                    type="code"
+                    type="password"
                     class="modal-input"
                     id="passwordDelete2"
                     placeholder="비밀번호 확인"
@@ -483,6 +496,7 @@
               class="signbutton"
               data-bs-toggle="modal"
               data-bs-target="#signupModal"
+              onclick="deleteUser()"
             >
               탈퇴하기
             </button>
