--- a/public/feed-create.html
+++ b/public/feed-create.html
@@ -147,12 +147,12 @@
                         <input id="feedtitle" type="text" placeholder="제목은 5자 이상 입력해주세요">
                         </div>
                     </div>
-                    <div class="col-lg-12">
+                    <!-- <div class="col-lg-12">
                         <label for="menuImage">등록하려는 찜 목록(최대 6개까지 선택 가능)<span>*</span></label>
                         <br></br>
                         <button id="openNewWindowBtn">담았던 상점 보기</button>
                         <input id="favoriteid" type="text">
-                    </div>
+                    </div> -->
                     <div class="col-lg-12">
                         <br></br>
                         <label for="menuImage">이미지 추가<span>*</span></label>
