--- a/public/feed-detail.html
+++ b/public/feed-detail.html
@@ -14,6 +14,8 @@
       href="https://fonts.googleapis.com/css2?family=Cairo:wght@200;300;400;600;900&display=swap"
       rel="stylesheet"
     />
+    <!-- bootstrap 적용을 위한 링크(모달창) -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <!-- font-awesome 적용 -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 
@@ -28,6 +30,7 @@
     <link rel="stylesheet" href="css/style.css" type="text/css" />
     <link rel="stylesheet" href="css/comment.css" type="text/css" />
     <link rel="stylesheet" href="css/feed-detail.css" type="text/css" />
+    <link rel="stylesheet" href="css/modaltest.css" type="text/css" />
   </head>
 
   <body>
@@ -228,6 +231,48 @@
       </div>
     </div>
     <!-- 로그인 모달 끝 -->
+    <!-- 피드 수정 모달 시작 -->
+    <div class="modal fade" id="feedModal" tabindex="-1" aria-labelledby="feedModalLabel" aria-hidden="true" data-bs-backdrop="static" data-bs-keyboard="false">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="feedModalLabel">수정하기</h5>
+            <button
+              type="button"
+              class="signbutton"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            >
+              <span aria-hidden="true">X</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <form class="login-wrap">
+              <div class="row mb-3">
+                <div class="col">
+                  <input type="code" id="titleUpdate" class="modal-input" placeholder="제목" required />
+                </div>
+              </div>
+              <div class="row mb-3">
+                <div class="col">
+                  <input type="file" id="imgUpdate" accept="image/*" class="modal-input" />
+                </div>
+              </div>
+              <div class="row mb-3">
+                <div class="col">
+                  <textarea id="descUpdate" class="modal-input" placeholder="내용" required></textarea>
+                </div>
+              </div>
+              <div class="alert alert-danger" id="loginError" style="display: none"></div>
+            </form>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="signbutton" id="feedUpdateButton" onclick="feedUpdate()">수정하기</button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- 피드 수정 모달 끝 -->
     <!-- 탑바 시작 -->
     <header class="header">
       <div class="header__top">
@@ -345,12 +390,12 @@
               </div>
               <div>
                 <!-- 빈하트 -->
-                <i class="far fa-heart fa-2x" ></i>
+                <i class="far fa-heart fa-2x" id="blankHeart" onclick="feedLike()"></i>
                 <!-- 꽉 찬 하트 -->
-                <i class="fas fa-heart fa-2x" style="color: #ec3609; display: none;"></i>
+                <i class="fas fa-heart fa-2x" id="fullHeart" onclick="feedLikeCancel()" style="color: #ec3609; display: none;"></i>
               </div>
               <div class="blog__item__text">
-                <button class="site-btn2" id="feed-change">피드 수정</button>
+                <button class="site-btn2" id="feedupdate" data-bs-toggle="modal" data-bs-target="#feedModal">피드 수정</button>
                 <button class="site-btn2" id="feed-delete" onclick="feedDelete()">피드 삭제</button>
                 <!-- 댓글 section 시작 -->
 <div id="comment-section">
@@ -375,72 +420,38 @@
                 <button class="site-btn2" id="feed-change" onclick=>피드 수정</button>
                 <button class="site-btn2" id="feed-delete" onclick="feedDelete()">피드 삭제</button>
                 <!-- 댓글 section 시작 -->
-<div id="comment-section">
-  <div class="comment-input-box">
-      <textarea id="comment-text" placeholder="댓글을 입력하세요..."></textarea>
-      <button class="site-btn2" id="commentCreate">댓글 생성</button>
-  </div>
-  <div id="comment-box">
-      <!-- 각 댓글은 아래와 같은 구조로 반복됩니다. -->
-      <div class="comment">
-        <div class="comment-info">
-            <h6 class="nickname">닉네임</h6>
-            <h6 class="comment-content">댓글 내용</h6>
-            
-            <!-- 세로 점 세 개 메뉴 아이콘 -->
-            <div class="menu-icon">
-                &#8942; <!-- 세로 점 세 개의 HTML 엔터티 코드 -->
-                <!-- 드롭다운 메뉴 -->
-                <div class="dropdown-menu">
-                    <button id="comment-change">댓글 수정</button>
-                    <button id="comment-delete">댓글 삭제</button>
-                <button class="site-btn2" id="feed-change">피드 수정</button>
-                <button class="site-btn2" id="feed-delete">피드 삭제</button>
-                <button class="site-btn2" id="commentCreate">댓글 생성</button>
-              </div>
+                <div id="comment-section">
+                  <div class="comment-input-box">
+                      <textarea id="comment-text" placeholder="댓글을 입력하세요..."></textarea>
+                      <button class="site-btn2" id="commentCreate">댓글 생성</button>
+                  </div>
+                  <div id="comment-box">
+                      <!-- 각 댓글은 아래와 같은 구조로 반복됩니다. -->
+                      <div class="comment">
+                        <div class="comment-info">
+                            <h6 class="nickname">닉네임</h6>
+                            <h6 class="comment-content">댓글 내용</h6>
+                            
+                            <!-- 세로 점 세 개 메뉴 아이콘 -->
+                            <div class="menu-icon">
+                                &#8942; <!-- 세로 점 세 개의 HTML 엔터티 코드 -->
+                                <!-- 드롭다운 메뉴 -->
+                                <div class="dropdown-menu">
+                                    <button id="comment-change">댓글 수정</button>
+                                    <button id="comment-delete">댓글 삭제</button>
+                                <button class="site-btn2" id="feed-change">피드 수정</button>
+                                <button class="site-btn2" id="feed-delete">피드 삭제</button>
+                                <button class="site-btn2" id="commentCreate">댓글 생성</button>
+                              </div>
+                                </div>
+                            </div>
+                        </div>
+                  </div>
                 </div>
-            </div>
-        </div>
-    </div>
-<!-- 댓글 section 끝 -->
+                <!-- 댓글 section 끝 -->
 
     </section>
-    <!-- 피드 상세 section  -->
-    <!-- Contact Section Begin -->
-    <section class="contact spad">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-3 col-md-3 col-sm-6 text-center">
-            <!-- <div class="contact__widget">
-              <span class="icon_phone"></span>
-              <h4>Phone</h4>
-              <p>+01-3-8888-6868</p>
-            </div> -->
-          </div>
-          <div class="col-lg-3 col-md-3 col-sm-6 text-center">
-            <!-- <div class="contact__widget">
-              <span class="icon_pin_alt"></span>
-              <h4>Address</h4>
-              <p>60-49 Road 11378 New York</p>
-            </div> -->
-          </div>
-          <div class="col-lg-3 col-md-3 col-sm-6 text-center">
-            <!-- <div class="contact__widget">
-              <span class="icon_clock_alt"></span>
-              <h4>Open time</h4>
-              <p>10:00 am to 23:00 pm</p>
-            </div> -->
-          </div>
-          <div class="col-lg-3 col-md-3 col-sm-6 text-center">
-            <!-- <div class="contact__widget">
-              <span class="icon_mail_alt"></span>
-              <h4>Email</h4>
-              <p>hello@colorlib.com</p>
-            </div> -->
-          </div>
-        </div>
-      </div>
-    </section>
+    <!-- 피드 상세 section 끝 -->
     <!-- Footer Section Begin -->
     <footer class="footer spad">
       <div class="container">
