--- a/public/feed-detail.html
+++ b/public/feed-detail.html
@@ -393,6 +393,8 @@
                 <i class="far fa-heart fa-2x" id="blankHeart" onclick="feedLike()"></i>
                 <!-- 꽉 찬 하트 -->
                 <i class="fas fa-heart fa-2x" id="fullHeart" onclick="feedLikeCancel()" style="color: #ec3609; display: none;"></i>
+                <!-- 좋아요 개수 -->
+                <h5 id="likeCount"></h5>
               </div>
               <div class="blog__item__text">
                 <button class="site-btn2" id="feedupdate" data-bs-toggle="modal" data-bs-target="#feedModal">피드 수정</button>
