fix: 프론트엔드 수정, 필요없는 파일 및 코드 정리
1. 선호도 페이지 프론트 수정
2. 메뉴 추천 페이지 프론트 수정
3. 메뉴판 페이지 프론트 수정
4. 필요없는 폴더 및 파일들 제거

--- a/public/feed-detail.html
+++ b/public/feed-detail.html
@@ -62,14 +62,6 @@
           <div class="modal-body">
             <form class="sign-wrap">
               <div class="row mb-3">
-                <div class="col">
-                  <input
-                    id="admin"
-                    class="modal-input"
-                    placeholder="일반회원=0, 관리자=1"
-                    required
-                  />
-                </div>
               </div>
               <div class="row mb-3">
                 <div class="col">
@@ -299,7 +291,6 @@
             <nav class="header__menu">
               <ul>
                 <li class="active">
-                  <a id="tob-bar" href="./index.html">홈</a>
                 </li>
                 <li>
                   <a id="tob-bar" href="./preference.html">선호도 조사</a>
@@ -350,58 +341,15 @@
                 <i class="fas fa-heart fa-2x" style="color: #ec3609; display: none;"></i>
               </div>
               <div class="blog__item__text">
-                <button class="site-btn2" id="feed-change">피드 수정</button>
+                <!-- <button class="site-btn2" id="feed-change">피드 수정</button> -->
                 <button class="site-btn2" id="feed-delete" onclick="feedDelete()">피드 삭제</button>
                 <!-- 댓글 section 시작 -->
 <div id="comment-section">
   <div class="comment-input-box">
       <textarea id="comment-text" placeholder="댓글을 입력하세요..."></textarea>
-      <button class="site-btn2" id="commentCreate">댓글 생성</button>
+      <button class="site-btn3" id="commentCreate">댓글 생성</button>
   </div>
-  <div id="comment-box">
-      <!-- 각 댓글은 아래와 같은 구조로 반복됩니다. -->
-      <div class="comment">
-        <div class="comment-info">
-            <h6 class="nickname">닉네임</h6>
-            <h6 class="comment-content">댓글 내용</h6>
-            
-            <!-- 세로 점 세 개 메뉴 아이콘 -->
-            <div class="menu-icon">
-                &#8942; <!-- 세로 점 세 개의 HTML 엔터티 코드 -->
-                <!-- 드롭다운 메뉴 -->
-                <div class="dropdown-menu">
-                    <!-- <button id="comment-change">댓글 수정</button> -->
-                    <button id="comment-delete">댓글 삭제</button>
-                <button class="site-btn2" id="feed-change" onclick=>피드 수정</button>
-                <button class="site-btn2" id="feed-delete" onclick="feedDelete()">피드 삭제</button>
-                <!-- 댓글 section 시작 -->
-<div id="comment-section">
-  <div class="comment-input-box">
-      <textarea id="comment-text" placeholder="댓글을 입력하세요..."></textarea>
-      <button class="site-btn2" id="commentCreate">댓글 생성</button>
-  </div>
-  <div id="comment-box">
-      <!-- 각 댓글은 아래와 같은 구조로 반복됩니다. -->
-      <div class="comment">
-        <div class="comment-info">
-            <h6 class="nickname">닉네임</h6>
-            <h6 class="comment-content">댓글 내용</h6>
-            
-            <!-- 세로 점 세 개 메뉴 아이콘 -->
-            <div class="menu-icon">
-                &#8942; <!-- 세로 점 세 개의 HTML 엔터티 코드 -->
-                <!-- 드롭다운 메뉴 -->
-                <div class="dropdown-menu">
-                    <button id="comment-change">댓글 수정</button>
-                    <button id="comment-delete">댓글 삭제</button>
-                <button class="site-btn2" id="feed-change">피드 수정</button>
-                <button class="site-btn2" id="feed-delete">피드 삭제</button>
-                <button class="site-btn2" id="commentCreate">댓글 생성</button>
-              </div>
-                </div>
-            </div>
-        </div>
-    </div>
+  <!-- 댓글 section 시작 -->
 <!-- 댓글 section 끝 -->
 
     </section>
