--- a/public/menu-subscribe.html
+++ b/public/menu-subscribe.html
@@ -33,6 +33,7 @@
     <link rel="stylesheet" href="css/style.css" type="text/css" />
     <link rel="stylesheet" href="css/modaltest.css" type="text/css" />
     <link rel="stylesheet" href="css/preference.css" type="text/css" />
+    <link rel="stylesheet" href="css/menu-subscribe.css" type="text/css" />
     <!-- axios 적용을 위한 script -->
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <!-- CSS Styles END -->
@@ -82,14 +83,6 @@
           <div class="modal-body">
             <form class="sign-wrap">
               <div class="row mb-3">
-                <div class="col">
-                  <input
-                    id="admin"
-                    class="modal-input"
-                    placeholder="일반회원=0, 관리자=1"
-                    required
-                  />
-                </div>
               </div>
               <div class="row mb-3">
                 <div class="col">
@@ -319,7 +312,6 @@
             <nav class="header__menu">
               <ul>
                 <li>
-                  <a id="tob-bar" href="./index.html">홈</a>
                 </li>
                 <li>
                   <a id="tob-bar" href="./preference.html">선호도 조사</a>
@@ -343,9 +335,7 @@
       </div>
     </header>
     <!-- 탑바 끝 -->
-    <div class="meal-all">
-      <h2>메뉴 추천</h2>
-  
+    <div class="meal-all">  
       <div class="image-container">
           <img src="/img/simsimi.png" alt="Simsimi Image" class="center-image" />
       </div>
