--- a/public/foodlist.html
+++ b/public/foodlist.html
@@ -69,14 +69,6 @@
           <div class="modal-body">
             <form class="sign-wrap">
               <div class="row mb-3">
-                <div class="col">
-                  <input
-                    id="admin"
-                    class="modal-input"
-                    placeholder="일반회원=0, 관리자=1"
-                    required
-                  />
-                </div>
               </div>
               <div class="row mb-3">
                 <div class="col">
@@ -306,7 +298,6 @@
             <nav class="header__menu">
               <ul>
                 <li>
-                  <a id="tob-bar" href="./index.html">홈</a>
                 </li>
                 <li>
                   <a id="tob-bar" href="./preference.html">선호도 조사</a>
@@ -341,20 +332,19 @@
               </select>
               -->
             </div>
+            <a href="#url" class="button_control2"><i class="fa fa-question-circle" aria-hidden="true"></i></a>
+          <div class="tooltip_layer2">메뉴의 버튼을 클릭하면 메뉴의 재료를 확인할 수 있습니다.</div>
+        </div>
             <form action="#" style="text-align: center">
-              
               <input type="text" id="searchInput" placeholder="검색어를 입력하세요">
               <button onclick="search()">검색</button>
             </form>
-       
-  
             <section class="featured spad">
               <div class="container">
                   <div class="row">
                       <div class="col-lg-12">
                         <div class="filter-buttons">
-                          <form action="#" style="text-align: center">                       
-  
+                          <form action="#" style="text-align: center">                      
                       </div>
                           <div class="featured__controls">
                             <ul>
