--- a/public/menu-subscribe.html
+++ b/public/menu-subscribe.html
@@ -336,12 +336,11 @@
     </header>
     <!-- 탑바 끝 -->
     <div class="meal-all">  
-      <div class="image-container">
+      <img src="/img/simsimi.png" alt="Simsimi Image" class="center-image" />
+      <!-- <div class="image-container">
           <img src="/img/simsimi.png" alt="Simsimi Image" class="center-image" />
-      </div>
-  
+      </div> -->
       <div class="center-button">
-
   </div>
         <button
           id="top_category_01"
