--- a/public/mypage.html
+++ b/public/mypage.html
@@ -27,6 +27,7 @@
     <link rel="stylesheet" href="css/slicknav.min.css" type="text/css" />
     <link rel="stylesheet" href="css/style.css" type="text/css" />
     <link rel="stylesheet" href="css/modaltest.css" type="text/css" />
+    <link rel="stylesheet" href="css/mypage.css" type="text/css" />
   </head>
 
   <body>
