fix: 일부 기능 수정 및 css 변경 피드 css 수정 및 일부 기능 수정

--- a/public/foodlist.html
+++ b/public/foodlist.html
@@ -26,6 +26,7 @@
     <link rel="stylesheet" href="css/slicknav.min.css" type="text/css" />
     <link rel="stylesheet" href="css/style.css" type="text/css" />
     <link rel="stylesheet" href="css/preference.css" type="text/css" />
+    <link rel="stylesheet" href="css/foodlist.css" type="text/css" />
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- 부트스트랩 JavaScript 파일 추가 (jQuery와 Popper.js를 포함) -->
