--- a/public/feed.html
+++ b/public/feed.html
@@ -22,6 +22,7 @@
     <link rel="stylesheet" href="css/slicknav.min.css" type="text/css" />
     <link rel="stylesheet" href="css/style.css" type="text/css" />
     <link rel="stylesheet" href="css/modaltest.css" type="text/css" />
+    <link rel="stylesheet" href="css/feed.css" type="text/css" />
     <!-- Script -->
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="./src/feed.js" defer></script>
