fix:: 메뉴 추천 기능 수정 HTML 변경으로 인해 작동하지 않아 수정

--- a/public/menu-subscribe.html
+++ b/public/menu-subscribe.html
@@ -335,11 +335,11 @@
       </div>
     </header>
     <!-- 탑바 끝 -->
-    <div class="meal-all">  
+    <div class="meal-all">
+      <div class="image-container">
       <img src="/img/simsimi.png" alt="Simsimi Image" class="center-image" />
-      <!-- <div class="image-container">
-          <img src="/img/simsimi.png" alt="Simsimi Image" class="center-image" />
-      </div> -->
+      </div>
+      
       <div class="center-button">
   </div>
         <button
