--- a/public/menu-subscribe.html
+++ b/public/menu-subscribe.html
@@ -335,13 +335,10 @@
       </div>
     </header>
     <!-- 탑바 끝 -->
-    <div class="meal-all">  
+    <div class="meal-all">
+      <div class="image-container">
       <img src="/img/simsimi.png" alt="Simsimi Image" class="center-image" />
-      <!-- <div class="image-container">
-          <img src="/img/simsimi.png" alt="Simsimi Image" class="center-image" />
-      </div> -->
-      <div class="center-button">
-  </div>
+      </div>
         <button
           id="top_category_01"
           class="filter-button"
