fix : 오류코드 수정

--- a/public/feed-create.html
+++ b/public/feed-create.html
@@ -143,7 +143,7 @@
                     <div class="col-lg-12">
                         <div class="checkout__input">
                         <p>TITLE<span>*</span></p>
-                        <input id="feedtitle" type="text" placeholder="제목은 5자 이상 입력해주세요">
+                        <input id="feedtitle" type="text" placeholder="제목을 입력해주세요">
                         </div>
                     </div>
                     <!-- <div class="col-lg-12">
@@ -154,13 +154,13 @@
                     </div> -->
                     <div class="col-lg-12">
                         <br></br>
-                        <label for="menuImage">이미지 추가<span>*</span></label>
-                        <input type="file" class="form-control" id="menuImage">
+                        <label for="menuImage" >이미지 추가<span></span></label>
+                        <input type="file" class="form-control" id="menuImage" >
                     </div>
                     <div class="col-lg-12 text">
                         <div class="checkout__input">
                             <p>CONTENT<span>*</span></p>
-                            <textarea id="description" placeholder="내용은 20자 이상 입력해주세요"></textarea>
+                            <textarea id="description" placeholder="내용은 5자 이상 입력해주세요"></textarea>
                         </div>
                     </div>
                     <div class="col-lg-12 text-center">
