--- a/public/menu-subscribe.html
+++ b/public/menu-subscribe.html
@@ -336,10 +336,12 @@
     </header>
     <!-- 탑바 끝 -->
     <div class="meal-all">  
-      <img src="/img/simsimi.png" alt="Simsimi Image" class="center-image" />
-      <!-- <div class="image-container">
-          <img src="/img/simsimi.png" alt="Simsimi Image" class="center-image" />
-      </div> -->
+      <div class="image-container">
+        <img src="/img/simsimi.png" alt="Simsimi Image" class="center-image" />
+        </div>
+        
+
+      
       <div class="center-button">
   </div>
         <button
