--- a/public/feed-create.html
+++ b/public/feed-create.html
@@ -211,7 +211,7 @@
     <!-- Footer Section End -->
     <script src="./src/feed-create.js"></script>
     <script src="./src/dailymenu.js" defer></script>
-
+    <script src="./src/user.js"></script>
     <!-- Js Plugins -->
     <script src="js/jquery-3.3.1.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
