fix: 프론트엔드 수정작업
1. 버튼 수정(다 통일시켜놓음)
2. 페이지 폰트 적용
3. 페이지 로그인체크, 페이지별 모달 적용
4. 기타 CSS및 html 수정 작업

--- a/public/feed-create.html
+++ b/public/feed-create.html
@@ -10,8 +10,10 @@
     <title>오늘 뭐 먹지?</title>
 
     <!-- Google Font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Cairo:wght@200;300;400;600;900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Sunflower:wght@300;500;700&display=swap"
       rel="stylesheet"
     />
     <!-- bootstrap 적용을 위한 링크(모달창) -->
