--- a/public/feed.html
+++ b/public/feed.html
@@ -8,8 +8,10 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
     <!-- Google Font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Cairo:wght@200;300;400;600;900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Sunflower:wght@300;500;700&display=swap"
       rel="stylesheet"
     />
     <!-- Css Styles START-->
@@ -403,6 +405,26 @@
     <!-- 적용하려는 script 파일 -->
     <script src="./src/user.js" defer></script>
     <script src="./src/dailymenu.js" defer></script>
+    <script>
+      window.onload = function (event) {
+        // 쿠키를 가져옵니다.
+        let cookies = document.cookie;
+
+        // 페이지를 방문한 적이 있고, AccessToken 또는 RefreshToken이 없는 경우에 모달을 로드합니다.
+        if (
+          sessionStorage.getItem('visitedBefore') === 'true' &&
+          !cookies.includes('AccessToken') &&
+          !cookies.includes('RefreshToken')
+        ) {
+          const loginModal = document.getElementById('loginModal');
+          const bsModal = new bootstrap.Modal(loginModal);
+          bsModal.show();
+        }
+
+        // 페이지를 방문한 흔적을 남깁니다.
+        sessionStorage.setItem('visitedBefore', 'true');
+      };
+    </script>
     <!-- Js Plugins -->
     <script src="js/jquery-3.3.1.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
