--- a/public/foodlist-admin.html
+++ b/public/foodlist-admin.html
@@ -9,8 +9,10 @@
     <title>오늘 뭐 먹지?</title>
 
     <!-- Google Font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Cairo:wght@200;300;400;600;900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Sunflower:wght@300;500;700&display=swap"
       rel="stylesheet"
     />
     <!-- bootstrap 적용을 위한 링크(모달창) -->
@@ -336,8 +338,7 @@
           <div class="col-lg-8" style="max-width: 1000px">
             <nav class="header__menu">
               <ul>
-                <li class="active">
-                  <a id="tob-bar" href="./index.html">홈</a>
+                <li>
                 </li>
                 <li>
                   <a id="tob-bar" href="./preference.html">선호도 조사</a>
@@ -345,7 +346,7 @@
                 <li>
                   <a id="tob-bar" href="./menu-subscribe.html">메뉴 추천</a>
                 </li>
-                <li><a id="tob-bar" href="./foodlist.html">메뉴판</a></li>
+                <li class="active"><a id="tob-bar" href="./foodlist.html">메뉴판</a></li>
                 <li><a id="tob-bar" href="./feed.html">피드</a></li>
               </ul>
             </nav>
