--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,10 @@
     <title>오늘 뭐 먹지?</title>
 
     <!-- Google Font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Cairo:wght@200;300;400;600;900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Sunflower:wght@300;500;700&display=swap"
       rel="stylesheet"
     />
     <!-- bootstrap 적용을 위한 링크(모달창) -->
@@ -101,13 +103,18 @@
               </div>
               <div class="row mb-3">
                 <div class="col">
-                  <input
-                    type="password"
-                    class="modal-input"
-                    placeholder="비밀번호"
-                    id="signupPassword"
-                    required
-                  />
+                  <div class="input-container">
+                    <input
+                      type="password"
+                      class="modal-input"
+                      id="signupPassword"
+                      required
+                    />
+                    <span class="placeholder-text"
+                      ><br />
+                      비밀번호는 영소문자 6~10자리입니다.</span
+                    >
+                  </div>
                 </div>
               </div>
               <div class="row mb-3">
@@ -326,6 +333,7 @@
         <h2 style="color: black; margin-top: 50px">TOGETHER EAT!</h2>
         <a href="menu-subscribe.html" class="mainMenuBtn">메뉴 추천</a>
         <a href="./preference.html" class="mainPreferBtn">선호도 조사</a>
+        <h2 style="color: black; margin-top: 30px">뭐 먹을지 고민이신가요?</h2>
       </div>
     </section>
     <footer class="footer spad">
@@ -363,7 +371,7 @@
                   </script>
                   All rights reserved | This page is made by TEAM TOGETHER EAT!
                   김세령 오준석 이서원 최하영 함형진
-                  <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                  <!-- Link back to C olorlib can't be removed. Template is licensed under CC BY 3.0. -->
                 </p>
               </div>
             </div>
@@ -374,24 +382,24 @@
     <!-- Footer Section End -->
     <!-- 적용하려는 script 파일 -->
     <script>
-      // window.onload = function (event) {
-      //   // 쿠키를 가져옵니다.
-      //   let cookies = document.cookie;
+      window.onload = function (event) {
+        // 쿠키를 가져옵니다.
+        let cookies = document.cookie;
 
-      //   // 페이지를 방문한 적이 있고, AccessToken 또는 RefreshToken이 없는 경우에 모달을 로드합니다.
-      //   if (
-      //     sessionStorage.getItem('visitedBefore') === 'true' &&
-      //     !cookies.includes('AccessToken') &&
-      //     !cookies.includes('RefreshToken')
-      //   ) {
-      //     const signModal = document.getElementById('signModal');
-      //     const bsModal = new bootstrap.Modal(signModal);
-      //     bsModal.show();
-      //   }
+        // 페이지를 방문한 적이 있고, AccessToken 또는 RefreshToken이 없는 경우에 모달을 로드합니다.
+        if (
+          sessionStorage.getItem('visitedBefore') === 'true' &&
+          !cookies.includes('AccessToken') &&
+          !cookies.includes('RefreshToken')
+        ) {
+          const signModal = document.getElementById('signModal');
+          const bsModal = new bootstrap.Modal(signModal);
+          bsModal.show();
+        }
 
-      //   // 페이지를 방문한 흔적을 남깁니다.
-      //   sessionStorage.setItem('visitedBefore', 'true');
-      // };
+        // 페이지를 방문한 흔적을 남깁니다.
+        sessionStorage.setItem('visitedBefore', 'true');
+      };
     </script>
     <script src="./src/user.js" defer></script>
     <script src="./src/dailymenu.js" defer></script>
