--- a/public/kakaomap-api.html
+++ b/public/kakaomap-api.html
@@ -4,8 +4,10 @@
     <meta charset="utf-8" />
     <title>오늘 뭐 먹지?</title>
     <!-- Google Font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Cairo:wght@200;300;400;600;900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Sunflower:wght@300;500;700&display=swap"
       rel="stylesheet"
     />
     <!-- 카카오용 css -->
