--- a/public/menu-subscribe.html
+++ b/public/menu-subscribe.html
@@ -14,14 +14,18 @@
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <title>오늘 뭐 먹지?</title>
 
+ <!-- Google Font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Sunflower:wght@300;500;700&display=swap"
+      rel="stylesheet"
+    />
+
     <!-- bootstrap 적용을 위한 링크(모달창) -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
-    <!-- Google Font -->
-    <link
-      href="https://fonts.googleapis.com/css2?family=Cairo:wght@200;300;400;600;900&display=swap"
-      rel="stylesheet"
-    />
+    
     <!-- Css Styles START-->
     <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css" />
     <link rel="stylesheet" href="css/font-awesome.min.css" type="text/css" />
@@ -49,6 +53,7 @@
     <script src="./src/mechu.js" defer></script>
     <script src="./src/menu-subscribe.js" defer></script>
     <script src="./src/menu-button.js" defer></script>
+    <script src="./src/checkLogin.js"></script>
   </head>
 
   <body>
