--- a/public/preference.html
+++ b/public/preference.html
@@ -6,14 +6,15 @@
     <meta name="keywords" content="Ogani, unica, creative, html" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <!-- font-awesome 적용 -->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+
     <title>오늘 뭐 먹지?</title>
 
     <!-- Google Font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Cairo:wght@200;300;400;600;900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Sunflower:wght@300;500;700&display=swap"
       rel="stylesheet"
     />
     <!-- bootstrap 적용을 위한 링크(모달창) -->
@@ -436,7 +437,7 @@
                   </script>
                   All rights reserved | This page is made by TEAM TOGETHER EAT!
                   김세령 오준석 이서원 최하영 함형진
-                  <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                  <!-- Link back to C olorlib can't be removed. Template is licensed under CC BY 3.0. -->
                 </p>
               </div>
             </div>
