fix: 현재 메뉴 기준 지도 API 불러오게 수정.. preference.html 목록 가로 배열 되게끔 변경 foods.users.weight 폴더 삭제 users.actions.controller 및 users.actions.service 변수명 변경 favoritelist.css URL에 css 효과 반영 users.actions.service 메뉴 추천 로직 재정비하여 업로드

--- a/public/preference.html
+++ b/public/preference.html
@@ -35,7 +35,6 @@
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <!-- CSS Styles END -->
   </head>
-  <script async src="./src/preference.js" defer></script>
   <body>
     <!-- Page Preloder -->
     <div id="preloder">
@@ -396,7 +395,7 @@
             </div>
           </div>
         </div>
-        <div class="row-cols-4 featured__filter" id="favoriteList"></div>
+        <div class="row featured__filter" id="favoriteList"></div>
       </div>
     </section>
     <!-- 선호음식 filter section 끝 -->
@@ -458,5 +457,6 @@
     <script src="js/mixitup.min.js"></script>
     <script src="js/owl.carousel.min.js"></script>
     <script src="js/main.js"></script>
+    <script src="./src/preference.js" defer></script>
   </body>
 </html>
